# prisma-sdwan-ansible-collection

./: pyproject.toml
cdot65/prisma_sdwan/: README.md  galaxy.yml
